feat: remove movie time feature
